--- a/CSRF/package.json
+++ b/CSRF/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "csrf",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,6 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
-    "jsonfile": "^2.4.0",
     "less-middleware": "~2.2.0",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
