--- a/CSRF/package.json
+++ b/CSRF/package.json
@@ -7,10 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.3",
+    "csurf": "^1.9.0",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-session": "^1.15.2",
+    "express-validator": "^3.1.3",
+    "helmet": "^3.5.0",
     "less-middleware": "~2.2.0",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
